--- a/src/components/articlesList/articlesList.module.css
+++ b/src/components/articlesList/articlesList.module.css
@@ -5,7 +5,7 @@
   background-color: rgb(235, 238, 243);
 }
 
-.articles-list {
+.articlesList {
   display: flex;
   flex-direction: column;
   gap: 25px;
