--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,57 +6,49 @@
   padding: 16px 22px;
 }
 
-.header__title {
+.title {
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
 }
 
-.header__title:hover {
+.title:hover {
   transition: 0.5s linear;
   color: #4f9fd4;
   transform: scale(1.3, 1.3);
 }
 
-.auth-links {
+.authLinks {
   display: flex;
   align-items: center;
-  gap: 0 10px;
+  gap: 20px;
 }
 
-.link-btn {
-  border: 1px solid transparent;
+.linkBtn {
+  font-family: Inter, sans-serif;
+  height: 40px;
   font-size: 18px;
-  line-height: 28px;
-  font-weight: 400;
   padding: 10px 18px;
-  border-radius: 5px;
-}
-
-.link-btn--black:hover {
-  border: 1px solid #158ddd;
-  color: #158ddd;
   transition: 0.3s linear;
 }
 
-.link-btn--green {
-  color: #52c41a;
-  border: 1px solid #52c41a;
-}
-
-.link-btn--green:hover {
-  border: 1px solid #52c41a;
-  background-color: #52c41a;
-  color: #ffffff;
+.linkBtnBlack {
+  border: 1px solid black;
 }
 
 .profile {
   display: flex;
-  gap: 25px;
   align-items: center;
+  gap: 25px;
 }
 
-.profile-info {
+.profileInfo {
   display: flex;
+  align-items: center;
   gap: 15px;
+}
+
+.avatar {
+  width: 46px;
+  height: 46px;
 }
